ref: fixed isue with map not showing up on route

--- a/web-app/src/App.scss
+++ b/web-app/src/App.scss
@@ -1,14 +1,3 @@
-.App {
-    height: 100% !important;
-    width: 100%;
-
-    .nav {
-        position: fixed;
-        top: 0;
-        z-index: 2;
-    }
-}
-
 ::-webkit-scrollbar {
     width: 4px;
     height: 3px;
