--- a/web-app/src/index.scss
+++ b/web-app/src/index.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 * {
     box-sizing: border-box;
@@ -7,7 +7,7 @@
 body,
 html,
 #root {
-    height: 100%;
-    width: 100%;
-    font-family: 'Inter', sans-serif !important;
+    height: 100% !important;
+    width: 100% !important;
+    font-family: "Inter", sans-serif !important;
 }
